tests/golden/diagnostics/deferred_pattern.txt
error[NQ-TYPE-030]: nested constructor patterns are deferred in v0.1
  --> diag_deferred.nq:4:14
   |         Some(Some(inner)) => {
   |              ^^^^^^^^^^^
